yew-functional-macro/tests/functional_macro/multiple-param-fail.stderr
error: functional components can accept at most one parameter for the props
  --> $DIR/multiple-param-fail.rs:10:24
   |
10 | fn comp(props: &Props, invalid: String) -> Html {
   |                        ^^^^^^^^^^^^^^^
